# Prosimos

./: .gitignore  .pylintrc  README.md  diff_res_bpsim.py  output.txt  prosimos.yml  pyproject.toml  requirements.txt  setup.py  simulation_scenario_example.json
bimp_test_examples/: BIMP_example.bpmn  CVS-Pharmacy.bpmn  CVS-Pharmacy.json  bimp_example.json  ch7_InsuranceClaimsSimulatio-StormScenario.bpmn  ch7_InsuranceClaimsSimulatio-StormScenario.json
bpdfr_discovery/: emd_metric.py  exceptions.py  inter_arrival_cases_discovery.py  log_comparison_metrics.py  log_parser.py
bpdfr_simulation_engine/: batch_processing.py  batch_processing_parser.py  batching_processing.py  case_attributes.py  control_flow_manager.py  events_performance_experiments.py  exceptions.py  execution_info.py  file_manager.py  prioritisation.py  prioritisation_parser.py  prioritisation_rules.py  priority_queue.py  probability_distributions.py  resource_calendar.py  resource_manager.py  resource_profile.py  simulation_engine.py  simulation_properties_parser.py  simulation_queues_ds.py  simulation_setup.py  simulation_stats.py  simulation_stats_calculator.py  weekday_helper.py
cli/: diff_res_bpsim.py
fuzzy_engine/: event_log_analyser.py  fuzzy_calendar.py  fuzzy_parser.py
performance_exp/: shared_func.py
prosimos/: all_attributes.py  batch_processing.py  batch_processing_parser.py  branch_condition_parser.py  branch_condition_rules.py  case_attributes.py  control_flow_manager.py  distribution_parser.py  event_attributes.py  event_attributes_parser.py  exceptions.py  execution_info.py  file_manager.py  gateway_condition_choice.py  global_attributes.py  global_attributes_parser.py  graph_usage_stats.py  histogram_distribution.py  outgoing_flow_selector.py  prioritisation.py  prioritisation_parser.py  probability_distributions.py  resource_calendar.py  resource_profile.py  simulation_engine.py  simulation_execution_stats.py  simulation_properties_parser.py  simulation_queues_ds.py  simulation_setup.py  simulation_stats.py  warning_logger.py  (+2 more)
(+243 files in other folders)
