[tool.poetry]
name = "prosimos"
version = "2.0.3"
description = ""
authors = [
    "Iryna Halenok <iryna.halenok@ut.ee>",
    "Orlenys López Pintado <orlenyslp@gmail.com>",
]
readme = "README.md"
packages = [
    { include = "cli" },
    { include = "prosimos" },
    { include = "bpdfr_discovery" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
click = "^8.1.3"
numpy = "^1.24.3"
pandas = "^2.0.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
scipy = "^1.10.1"
pix-framework = "^0.13.0"
pylint = "^2.17.4"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[tool.poetry.scripts]
prosimos = "cli.diff_res_bpsim:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
