[tool.poetry]
name = "diffresbp-simulator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [{ include = "bpdfr_simulation_engine" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
click = "^8.1.3"
numpy = "^1.24.3"
pandas = "^2.0.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
scipy = "^1.10.1"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
